# BulanciServer

./: CMakeLists.txt  a.out  main.cpp
Comunication/ComunicationManager/: ComunicationManager.cpp  ComunicationManager.h
Comunication/Data/: PlayerData.cpp  PlayerData.h
Comunication/Socket/: Socket.cpp  Socket.h
